sitio arreglado en noticias y index

--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.3/css/all.min.css">
 
     <!--icono sobre el titulo de la pagina-->
-    <link rel="shortcut icon" href="images/logos/icono1.png">
+    <link rel="shortcut icon" href="../images/logos/icono1.png">
 
     <title>Le Vegane</title>
 </head>
@@ -124,7 +124,7 @@
                 <div class="card-body text-dark bg-light rounded-3">
                     <h2 class="card-title">CEO de Unilever: «El mundo se está moviendo hacia una alimentación vegetariana»</h2>
                     <p class="card-text">El director ejecutivo de Unilever, Alan Jope, admitio que el mundo está cambiando hacia una alimentación vegetariana, además describio la creciente demanda de alimentos de origen vegetal como una tendencia «sorprendente».</p>
-                    <a class="btn btn-outline-secondary" href="#!">Leer Más→</a>
+                    <a class="btn btn-outline-secondary" href="noticias/unilever.html">Leer Más→</a>
                 </div>
               </div>
               
@@ -134,28 +134,28 @@
                 <div class="card">
                   <img src="images/noticias/vegproducts.jpeg" class="card-img-top" alt="...">
                   <div class="card-body">
-                    <h5 class="card-title">Card title</h5>
-                    <p class="card-text">This is a wider card with supporting text below as a natural lead-in to additional content. This content is a little bit longer.</p>
+                    <h5 class="card-title">El mercado vegano europeo creció un 49% en 2 años, según nuevo informe</h5>
+                    <p class="card-text">Un reciente estudio revelo que el mercado vegano de Europa creció al menos un 49% en solo dos años, alcanzando un total de 3.600 millones de euros en ventas.</p>
                   </div>
-                  <a class="btn btn-outline-secondary" href="#!">Read More →</a>
+                  <a class="btn btn-outline-secondary" href="noticias/mercadovegano.html">Leer Más →</a>
                 </div>
 
                 <div class="card">
                   <img src="images/noticias/beyond-meat.jpeg" class="card-img-top" alt="...">
                   <div class="card-body">
-                    <h5 class="card-title">Card title</h5>
-                    <p class="card-text">This card has supporting text below as a natural lead-in to additional content.</p>
+                    <h5 class="card-title">Beyond Meat y Pepsi se unen para aumentar la accesibilidad global de la proteína vegetal</h5>
+                    <p class="card-text">La gigante vegana Beyond Meat se acaba de asociar con el gigante de alimentos y bebidas PepsiCo para aumentar la accesibilidad de proteínas de origen vegetal en todo el mundo</p>
                   </div>
-                  <a class="btn btn-outline-secondary" href="#!">Read More →</a>
+                  <a class="btn btn-outline-secondary" href="noticias/beyond.html">Leer Más →</a>
                 </div>
 
                 <div class="card">
                   <img src="images/noticias/notestingonanimals1.jpeg" class="card-img-top" alt="...">
                   <div class="card-body">
-                    <h5 class="card-title">Card title</h5>
-                    <p class="card-text">This is a wider card with supporting text below as a natural lead-in to additional content. This card has even longer content than the first to show that equal height action.</p>
+                    <h5 class="card-title">China ya no exigirá la experimentación con animales en cosméticos importados</h5>
+                    <p class="card-text">La Administración Nacional de Productos Médicos (NMPA), que regula los medicamentos y dispositivos médicos de la región, hizo el anuncio el anuncio en su web. En un reciente aviso, declaró que los cosméticos ordinarios importados ya no se probarían en animales a partir del 1 de mayo.</p>
                   </div>
-                  <a class="btn btn-outline-secondary" href="#!">Read More →</a>
+                  <a class="btn btn-outline-secondary" href="noticias/china.html">Read More →</a>
                 </div>
               </div>       
               
@@ -163,30 +163,30 @@
               <div class="card-group">
 
                 <div class="card">
-                  <img src="images/noticias/vegproducts.jpeg" class="card-img-top" alt="...">
+                  <img src="images/recetas/receta1.jpeg" class="card-img-top" alt="...">
                   <div class="card-body">
-                    <h5 class="card-title">Card title</h5>
-                    <p class="card-text">This is a wider card with supporting text below as a natural lead-in to additional content. This content is a little bit longer.</p>
+                    <h5 class="card-title">Sandwich de No-Pollo</h5>
+                    <p class="card-text">Delicioso Sandwich de no-pollo ideal para celebraciones o para picnics con tus seres queridos, totalmente vegan.</p>
                   </div>
-                  <a class="btn btn-outline-secondary" href="#!">Read More →</a>
+                  <a class="btn btn-outline-secondary" href="recetasitios/sandwich-no-pollo.html">Leer Más →</a>
                 </div>
 
                 <div class="card">
-                  <img src="images/noticias/beyond-meat.jpeg" class="card-img-top" alt="...">
+                  <img src="images/recetas/receta2.jpeg" class="card-img-top" alt="...">
                   <div class="card-body">
-                    <h5 class="card-title">Card title</h5>
-                    <p class="card-text">This card has supporting text below as a natural lead-in to additional content.</p>
+                    <h5 class="card-title">Ricotta de maní</h5>
+                    <p class="card-text">Esta maravillosa ricotta vegana pueden disfrutarla en un aperitivo con unas ricas bruschetas acompañadas de tomatitos cherry y ciboulette.</p>
                   </div>
-                  <a class="btn btn-outline-secondary" href="#!">Read More →</a>
+                  <a class="btn btn-outline-secondary" href="recetasitios/ricotta-de-mani.html">Leer Más →</a>
                 </div>
 
                 <div class="card">
-                  <img src="images/noticias/notestingonanimals1.jpeg" class="card-img-top" alt="...">
+                  <img src="images/recetas/receta3.jpg" class="card-img-top" alt="...">
                   <div class="card-body">
-                    <h5 class="card-title">Card title</h5>
-                    <p class="card-text">This is a wider card with supporting text below as a natural lead-in to additional content. This card has even longer content than the first to show that equal height action.</p>
+                    <h5 class="card-title">Harina de garbanzos</h5>
+                    <p class="card-text">Este ingrediente tiene diversos usos, ya que puede servir como remplazo de la harina de trigo y servir como espesante en preparaciones en vez del huevo.</p>
                   </div>
-                  <a class="btn btn-outline-secondary" href="#!">Read More →</a>
+                  <a class="btn btn-outline-secondary" href="recetasitios/harina-de-garbanzos.html">Leer Más →</a>
                 </div>
               </div> 
               <!-- fin cards compactas-->
