--- a/noticias/activismo.html
+++ b/noticias/activismo.html
@@ -9,16 +9,16 @@
         <link rel="icon" type="image/x-icon" href="assets/favicon.ico" />
 
            <!-- Archivos externos -->
-        <link rel="stylesheet" href="CSS/estilo.css" />
-        <link rel="stylesheet" href="CSS/estilo-menu.css" />
-        <link rel='stylesheet' type='text/css' media='screen' href='CSS/bootstrap.css'>
+        <link rel="stylesheet" href="../CSS/estilo.css" />
+        <link rel="stylesheet" href="../CSS/estilo-menu.css" />
+        <link rel='stylesheet' type='text/css' media='screen' href='../CSS/bootstrap.css'>
         <!-- Font Awesome icons (free version)-->
         <script src="https://use.fontawesome.com/releases/v5.15.3/js/all.js" crossorigin="anonymous"></script>
         <!-- Google fonts-->
         <link href="https://fonts.googleapis.com/css?family=Lora:400,700,400italic,700italic" rel="stylesheet" type="text/css" />
         <link href="https://fonts.googleapis.com/css?family=Open+Sans:300italic,400italic,600italic,700italic,800italic,400,300,600,700,800" rel="stylesheet" type="text/css" />
         <!-- Core theme CSS (includes Bootstrap)-->
-        <link href="CSS/styles.css" rel="stylesheet" />
+        <link href="../CSS/styles.css" rel="stylesheet" />
         
     </head>
     <body class="body1">
@@ -26,8 +26,8 @@
             <!--navbar-->
     <nav class="navbar navbar-expand-lg navbar-dark bg-dark fixed-top" aria-label="Eighth navbar example">
         <div class="container">
-            <a class="navbar-brand" href="index.html">
-                <img src="images/logos/blancologo.png" width="145" height="35" class="d-inline-block align-top" alt="">
+            <a class="navbar-brand" href="../index.html">
+                <img src="../images/logos/blancologo.png" width="145" height="35" class="d-inline-block align-top" alt="">
             </a>
             <button class="navbar-toggler collapsed" type="button" data-bs-toggle="collapse"
                 data-bs-target="#navbarsExample07" aria-controls="navbarsExample07" aria-expanded="false"
@@ -38,13 +38,13 @@
             <div class="navbar-collapse collapse" id="navbarsExample07" style="">
                 <ul class="navbar-nav me-auto mb-2 mb-lg-0">
                     <li class="nav-item">
-                        <a class="nav-link active" aria-current="page" href="index.html">Inicio</a>
+                        <a class="nav-link active" aria-current="page" href="../index.html">Inicio</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link active" aria-current="page" href="recetas.html">Recetas</a>
+                        <a class="nav-link active" aria-current="page" href="../recetas.html">Recetas</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link active" aria-current="page" href="tips.html">Tips</a>
+                        <a class="nav-link active" aria-current="page" href="../tips.html">Tips</a>
                     </li>
                     <li class="nav-item dropdown">
                         <a class="nav-link dropdown-toggle" href="#" id="dropdown07" data-bs-toggle="dropdown"
@@ -62,7 +62,7 @@
 
         
         <!-- Page Header-->
-        <header class="masthead" style="background-image: url('images/noticias/activismo.jpeg')">
+        <header class="masthead" style="background-image: url('../images/noticias/activismo.jpeg')">
             <div class="overlay"></div>
             <div class="container">
                 <div class="row">
@@ -96,7 +96,7 @@
                         <h3 class="section-heading">3- Igualdad Animal</h3>
                         <p>Reconocido internacionalmente en Europa, Igualdad Animal lleva años en el activismo animal ayudando a miles de animales y promoviendo el veganismo, la organización permite que se pueda hacer activismo online.
                         </p>
-                        <a href="#!"><img class="img-fluid" src="images/noticias/activismo.jpeg" alt="..." /></a>
+                        <a href="#!"><img class="img-fluid" src="../images/noticias/activismo.jpeg" alt="..." /></a>
 
                         </p>
                     </div>
