--- a/index.html
+++ b/index.html
@@ -197,23 +197,23 @@
                       <div class="h-40 p-5 text-white bg-dark rounded-3">
                         <h3>Descubre nuestros lugares recomendados!</h3>
                         <p>Le vegane te presenta los mejores lugares para comer con las 3B Bueno, Bonito y Barato.</p>
-                        <button class="btn btn-outline-light" type="button">Leer Más</button>
+                        <a class="btn btn-outline-secondary" href="#">Leer Más →</a>
                       </div>
 
                       <div class="h-40 p-5 bg-light border rounded-3">
                         <h3>Infórmate con los últimos tips de la vida vegana</h3>
                         <p>los mejores tips para que te cambies a la vida vegana</p>
-                        <button class="btn btn-outline-secondary" type="button">Leer Más</button>
+                        <a class="btn btn-outline-secondary" href="tips.html">Leer Más →</a>
                       </div>
                       <div class="h-40 p-5 text-white bg-dark rounded-3">
                         <h3>Regístrate y se parte de la comunidad Le Vegane</h3>
                         <p>Entérate de todo lo que tenemos para ti!</p>
-                        <button class="btn btn-outline-light" type="button">Leer Más</button>
+                        <a class="btn btn-outline-secondary" href="#">Leer Más →</a>
                       </div>
                       <div class="h-40 p-5 bg-light border rounded-3">
                         <h3>Revisa las exclusivas recetas de Le Vegane</h3>
                         <p>Para hacer tu vida vegana más fácil</p>
-                        <button class="btn btn-outline-secondary" type="button">Leer Más</button>
+                        <a class="btn btn-outline-secondary" href="recetas.html">Leer Más →</a>
                       </div>
 
 
