--- a/index.html
+++ b/index.html
@@ -16,13 +16,53 @@
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta3/dist/css/bootstrap.min.css" rel="stylesheet"
         integrity="sha384-eOJMYsd53ii+scO/bJGFsiCZc+5NDVN2yr8+0RDqr0Ql0h+rP48ckxlpbzKgwra6" crossorigin="anonymous">
 
-
     <!-- cdn de font awesome-->
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.3/css/all.min.css">
 
     <!--icono sobre el titulo de la pagina-->
     <link rel="shortcut icon" href="../images/logos/icono1.png">
 
+    <!-- JQUERY -->
+    <script src="https://code.jquery.com/jquery-3.6.0.slim.min.js"
+        integrity="sha256-u7e5khyithlIdTpu22PHhENmPcRdFiHRjhAuHcs05RI=" crossorigin="anonymous"></script>
+    <script type="text/javascript">
+        $(document).ready(function ($) {
+            var mensaje = "";
+            $("#alerta").hide();
+
+            $("#formulario").submit(function () {
+                
+                if ($("#nombre").val().trim().length == 0) {
+                    $("#nombre:first").addClass("is-invalid");
+                    mensaje = "debe completar los campos marcados con *";
+                }
+
+                if ($("#correo").val().trim().length == 0) {
+                    $("#correo:first").addClass("is-invalid");
+                    mensaje = "debe completar los campos marcados con *";
+                }
+
+                if ($("#mensaje").val().trim().length < 20) {
+                    $("#mensaje:first").addClass("is-invalid");
+                    mensaje = "debe completar el campo obligatorio de mensaje con un mínimo de 20 caracteres";
+                }
+
+                if (mensaje != "") {
+                    $("#alerta").html(mensaje);
+                    $("#alerta").show();
+                    event.preventDefault();
+                }
+
+                $("#reset").click(function () {
+                    $("#alerta").hide();
+                    $("#nombre").removeClass("is-invalid");
+                    $("#correo").removeClass("is-invalid");
+                    $("#mensaje").removeClass("is-invalid");
+                    var mensaje = "";
+                });
+            });
+        });
+    </script>
     <title>Le Vegane</title>
 </head>
 
@@ -64,7 +104,6 @@
                             <li><a class="dropdown-item" href="tips.html">Tips</a></li>
                         </ul>
                     </li>
-                    
                 </ul>
             </div>
         </div>
@@ -238,6 +277,38 @@
 
 
 
+            </div>
+        </div>
+
+        <!-- FORMULARIO -->
+        <div class="container form-contact">
+            <div class="row">
+                <form id="formulario" name="formulario" action="recibe.php" method="GET" enctype="multipart/form-data">
+                    <legend class="text-center">Contacto</legend>
+                    <!-- NOMBRE -->
+                    <div class="form-floating mb-3">
+                        <input type="text" class="form-control" id="nombre" name="nombre" placeholder="Aaaa Bbbb" />
+                        <label for="nombre" class="form-control-placeholder">Nombre completo*</label>
+                    </div>
+
+                    <!-- CORREO -->
+                    <div class="form-floating mb-3">
+                        <input type="email" class="form-control" id="correo" name="correo"
+                            placeholder="correo@correo.com" />
+                        <label for="correo">Correo electrónico *</label>
+                    </div>
+
+                    <!-- MENSAJE -->
+                    <div class="form-floating mb-3">
+                        <textarea name="mensaje" id="mensaje" class="form-control" placeholder="Envíanos tus comentarios. *" minlength="10" style="height: 150px"></textarea>
+                        <label for="mensaje" class="form-label">Envíanos tus comentarios. *</label>
+                    </div>
+
+                    <input type="submit" class="btn btn-primary" id="enviar" name="enviar" value="Enviar" />
+                    <input type="reset" class="btn btn-secondary" id="reset" name="reset" value="Limpiar" />
+
+                    <div id="alerta" class="alert alert-danger" role="alert"></div>
+                </form>
             </div>
         </div>
 
