Actualización de comentarios

--- a/iniciar-sesion.html
+++ b/iniciar-sesion.html
@@ -23,6 +23,7 @@
     <!--icono sobre el titulo de la pagina-->
     <link rel="shortcut icon" href="../images/logos/icono1.png">
 
+    <!-- JQUERY -->
     <script src="https://code.jquery.com/jquery-3.6.0.slim.min.js"
         integrity="sha256-u7e5khyithlIdTpu22PHhENmPcRdFiHRjhAuHcs05RI=" crossorigin="anonymous"></script>
     <script type="text/javascript">
