php de Lugares Recomendados añadido, no se logra solucionar el error encontrado

--- a/index.html
+++ b/index.html
@@ -100,7 +100,7 @@
                         <a class="nav-link dropdown-toggle" href="#" id="dropdown07" data-bs-toggle="dropdown"
                             aria-expanded="false">Más</a>
                         <ul class="dropdown-menu" aria-labelledby="dropdown07">
-                            <li><a class="dropdown-item" href="#">Lugares Recomendados</a></li>
+                            <li><a class="dropdown-item" href="lugares.html">Lugares Recomendados</a></li>
                             <li><a class="dropdown-item" href="tips.html">Tips</a></li>
                         </ul>
                     </li>
