--- a/lugares.html
+++ b/lugares.html
@@ -21,12 +21,35 @@
     <!--icono sobre el titulo de la pagina-->
     <link rel="shortcut icon" href="../images/logos/icono1.png">
 
+    <!-- Option 2: Separate Popper and Bootstrap JS -->
+    <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.9.2/dist/umd/popper.min.js"
+        integrity="sha384-IQsoLXl5PILFhosVNubq5LC7Qb9DXgDA9i+tQ8Zj3iwWAwPtgFTxbJ8NT4GN1R8p"
+        crossorigin="anonymous"></script>
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.1/dist/js/bootstrap.min.js"
+        integrity="sha384-Atwg2Pkwv9vp0ygtn1JAojH0nYbwNJLPhwyoVbhoPwBhjQPR5VtM2+xf0Uwh9KtT"
+        crossorigin="anonymous"></script>
+    <!-- jQuery Core 3.6.0 -->
+    <script src="https://code.jquery.com/jquery-3.6.0.min.js"
+        integrity="sha256-/xUj+3OJU5yExlq6GSYGSHk7tPXikynS7ogEvDej/m4=" crossorigin="anonymous"></script>
+    <script type="text/javascript">
+        $(document).ready(function () {
+            $("#enviar").click(function () {
+                $.get("/categories.php.json",
+                    function (data) {
+                        $.each(data.categories, function (i, item) {
+                            $("#categoria").append("<tr><td>" + item.strCategory + "</td><td><iframe src='" + item.strCategoryThumb + "' width='400' height='250' style='border:0;' allowfullscreen='' loading='lazy'></iframe></td><td>" + item.strCategoryDescription + "</td><td> <a href='" + item.strContacto + "' target='_blank'><img src='images/logos/Icono-Telefono.png' width='100px' height='100px'/></a></td></tr>");
+                        });
+                    });
+            });
+        });
+    </script>
 
     <title>Le Vegane</title>
 </head>
 
 <body class="body1">
     <!--navbar-->
+
     <nav class="navbar navbar-expand-lg navbar-dark bg-dark fixed-top" aria-label="Eighth navbar example">
         <div class="container">
             <a class="navbar-brand" href="index.html">
@@ -76,10 +99,10 @@
             <table id="categoria" class="table">
                 <thead>
                     <tr>
-                        <th scope="col">#</th>
                         <th scope="col">Nombre</th>
-                        <th scope="col">Imagen</th>
+                        <th scope="col">Mapa</th>
                         <th scope="col">Descripcion</th>
+                        <th scope="col">Contacto</th>
                     </tr>
                 </thead>
                 <tbody>
@@ -93,6 +116,7 @@
 
     <!-- ****************************************************************************** -->
     <!-- Footer-->
+
     <footer class="py-5 bg-dark">
         <div class="container">
             <div class="row">
@@ -128,29 +152,6 @@
             </div>
         </div>
     </footer>
-
-    <!-- Option 2: Separate Popper and Bootstrap JS -->
-    <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.9.2/dist/umd/popper.min.js"
-        integrity="sha384-IQsoLXl5PILFhosVNubq5LC7Qb9DXgDA9i+tQ8Zj3iwWAwPtgFTxbJ8NT4GN1R8p"
-        crossorigin="anonymous"></script>
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.1/dist/js/bootstrap.min.js"
-        integrity="sha384-Atwg2Pkwv9vp0ygtn1JAojH0nYbwNJLPhwyoVbhoPwBhjQPR5VtM2+xf0Uwh9KtT"
-        crossorigin="anonymous"></script>
-    <!-- jQuery Core 3.6.0 -->
-    <script src="https://code.jquery.com/jquery-3.6.0.min.js"
-        integrity="sha256-/xUj+3OJU5yExlq6GSYGSHk7tPXikynS7ogEvDej/m4=" crossorigin="anonymous"></script>
-    <script type="text/javascript">
-        $(document).ready(function(){
-            $("#enviar").click(function(){
-                $.get("./php/categories.php",
-                    function (data) {
-                        $.each(data.categories, function (i, item) {
-                            $("#categoria").append("<tr><td>" + item.idCategory + "</td><td>" + item.strCategory + "</td><td><iframe src='" + item.strCategoryThumb + "' width='600' height='450' style='border:0;' allowfullscreen='' loading='lazy'></iframe></td><td>" + item.strCategoryDescription + "</td></tr>");
-                        });
-                    });
-            });
-        });
-    </script>
 </body>
 
 </html>
