Tabla modificada para verse mejor

--- a/lugares.html
+++ b/lugares.html
@@ -95,8 +95,8 @@
                 <button type="button" class="btn btn-primary" id="enviar">Traer Datos</button>
             </div>
         </div>
-        <div class="row">
-            <table id="categoria" class="table">
+        <div class="table-responsive">
+            <table id="categoria" class="table table-hover">
                 <thead>
                     <tr>
                         <th scope="col">Nombre</th>
