--- a/index.html
+++ b/index.html
@@ -256,7 +256,7 @@
                 <div class="h-40 p-5 text-white bg-dark rounded-3">
                     <h3>Descubre nuestros lugares recomendados!</h3>
                     <p>Le vegane te presenta los mejores lugares para comer con las 3B Bueno, Bonito y Barato.</p>
-                    <a class="btn btn-outline-secondary" href="#">Leer Más →</a>
+                    <a class="btn btn-outline-secondary" href="lugares.html">Leer Más →</a>
                 </div>
 
                 <div class="h-40 p-5 bg-light border rounded-3">
@@ -267,7 +267,7 @@
                 <div class="h-40 p-5 text-white bg-dark rounded-3">
                     <h3>Regístrate y se parte de la comunidad Le Vegane</h3>
                     <p>Entérate de todo lo que tenemos para ti!</p>
-                    <a class="btn btn-outline-secondary" href="#">Leer Más →</a>
+                    <a class="btn btn-outline-secondary" href="registrar.html">Leer Más →</a>
                 </div>
                 <div class="h-40 p-5 bg-light border rounded-3">
                     <h3>Revisa las exclusivas recetas de Le Vegane</h3>
