--- a/recetas.html
+++ b/recetas.html
@@ -48,13 +48,13 @@
                         <a class="nav-link active" aria-current="page" href="recetas.html">Recetas</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link active" aria-current="page" href="#">Regístrate</a>
+                        <a class="nav-link active" aria-current="page" href="registrar.html">Regístrate</a>
                     </li>
                     <li class="nav-item">
                         <a class="nav-link active" aria-current="page" href="noticias.html">Noticias</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link active" aria-current="page" href="#">Lugares Recomendados</a>
+                        <a class="nav-link active" aria-current="page" href="lugares.html">Lugares Recomendados</a>
                     </li>
                     <li class="nav-item">
                         <a class="nav-link active" aria-current="page" href="tips.html">Tips</a>
